@@ -22,12 +22,77 @@ import sys
 import threading
 from re import findall
 from sha import new
+from string import lower
 from Debomatic import globals
 from Debomatic import gpg
 from Debomatic import locks
 from Debomatic import packages
-from Debomatic import parser
 from Debomatic import pbuilder
+
+def build_process():
+    directory = globals.Options.get('default', 'packagedir')
+    configdir = globals.Options.get('default', 'configdir')
+    package = packages.select_package(directory)
+    if package:
+        distopts = parse_distribution_options(directory, configdir, package)
+        try:
+            fd = os.open(os.path.join(directory, package), os.O_RDONLY)
+        except:
+            print 'Unable to open %s' % os.path.join(directory, package)
+            packages.del_package(package)
+            sys.exit(-1)
+        for entry in findall('\s\w{32}\s\d+\s\S+\s\S+\s(.*)', os.read(fd, os.fstat(fd).st_size)):
+            globals.packagequeue[package].append(os.path.join(directory, entry))
+        globals.packagequeue[package].append(os.path.join(directory, package))
+        os.close(fd)
+        if gpg.check_signature(os.path.join(directory, package)) == False:
+            packages.rm_package(package)
+            sys.exit(-1)
+	packages.fetch_missing_files(package, globals.packagequeue[package], directory, distopts)
+        distdir = os.path.join(directory, distopts['distribution'])
+        if pbuilder.setup_pbuilder(distdir, configdir, distopts) == False:
+            packages.del_package(package)
+            sys.exit(-1)
+        build_package(directory, os.path.join(configdir, distopts['distribution']), distdir, package, distopts)
+        check_package(directory, distopts['distribution'], package)
+
+def parse_distribution_options(packagedir, configdir, package):
+    options = dict()
+    try:
+        fd = os.open(os.path.join(packagedir, package), os.O_RDONLY)
+    except:
+        print 'Unable to open %s' % os.path.join(packagedir, package)
+        packages.del_package(package)
+        sys.exit(-1)
+    try:
+        distro = findall('Distribution:\s+(\w+)', os.read(fd, os.fstat(fd).st_size))[0]
+        options['distribution'] = lower(distro)
+    except:
+        print 'Bad .changes file'
+        packages.del_package(package)
+        sys.exit(-1)
+    os.close(fd)
+    try:
+        fd = os.open(os.path.join(configdir,options['distribution']), os.O_RDONLY)
+    except:
+        print 'Unable to open %s' % os.path.join(configdir, options['distribution'])
+        packages.del_package(package)
+        sys.exit(-1)
+    conf = os.read(fd, os.fstat(fd).st_size)
+    os.close(fd)
+    try:
+        options['mirror'] = findall('[^#]?MIRRORSITE="?(.*[^"])"?\n', conf)[0]
+    except:
+        print 'Please set MIRRORSITE in %s' % os.path.join(configdir, options['distribution'])
+        packages.del_package(package)
+        sys.exit(-1)
+    try:
+        options['components'] = findall('[^#]?COMPONENTS="?(.*[^"])"?\n', conf)[0]
+    except:
+        print 'Please set COMPONENTS in %s' % os.path.join(configdir, options['distribution'])
+        packages.del_package(package)
+        sys.exit(-1)
+    return options
 
 def build_package(directory, configfile, distdir, package, distopts):
     if not locks.buildlock_acquire():
@@ -70,31 +135,4 @@ def check_package(directory, distribution, changes):
     if changesfile:
         if globals.Options.has_option('checks', 'lintian') and globals.Options.getint('checks', 'lintian'):
             os.system('lintian --allow-root -i -I %s > %s' % (changesfile, lintian))
-
-def build_process():
-    directory = globals.Options.get('default', 'packagedir')
-    configdir = globals.Options.get('default', 'configdir')
-    package = packages.select_package(directory)
-    if package:
-        distopts = parser.parse_distribution_options(directory, configdir, package)
-        try:
-            fd = os.open(os.path.join(directory, package), os.O_RDONLY)
-        except:
-            print 'Unable to open %s' % os.path.join(directory, package)
-            packages.del_package(package)
-            sys.exit(-1)
-        for entry in findall('\s\w{32}\s\d+\s\S+\s\S+\s(.*)', os.read(fd, os.fstat(fd).st_size)):
-            globals.packagequeue[package].append(os.path.join(directory, entry))
-        globals.packagequeue[package].append(os.path.join(directory, package))
-        os.close(fd)
-        if gpg.check_signature(os.path.join(directory, package)) == False:
-            packages.rm_package(package)
-            sys.exit(-1)
-	packages.fetch_missing_files(package, globals.packagequeue[package], directory, distopts)
-        distdir = os.path.join(directory, distopts['distribution'])
-        if pbuilder.setup_pbuilder(distdir, configdir, distopts) == False:
-            packages.del_package(package)
-            sys.exit(-1)
-        build_package(directory, os.path.join(configdir, distopts['distribution']), distdir, package, distopts)
-        check_package(directory, distopts['distribution'], package)
 
