@@ -18,35 +18,8 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-import os
-import sys
-from getopt import getopt, GetoptError
-from Debomatic import globals
-from Debomatic import daemonize
-from Debomatic import launcher
-from Debomatic import parser
-
-def main():
-    conffile = None
-    daemon = True
-    if os.getuid():
-        print 'You must run deb-o-matic as root'
-        sys.exit(-1)
-    try:
-        opts, args = getopt(sys.argv[1:], 'c:n', ['config=', 'nodaemon'])
-    except GetoptError, error:
-        print error.msg
-        sys.exit(-1)
-    for o, a in opts:
-        if o in ("-c", "--config"):
-            conffile = a
-        if o in ('-n', '--nodaemon'):
-            daemon = False
-    parser.parse_default_options(conffile)
-    if daemon:
-        daemonize.daemonize(globals.Options.get('default', 'logfile'))
-    launcher.launcher()
+from Debomatic import debomatic
 
 if __name__ == "__main__":
-    main()
+    debomatic.main()
 
