@@ -1,3 +1,6 @@
+  106 Luca Falavigna	2008-08-07
+      Code reorganization, some files merged
+
   105 Luca Falavigna	2008-06-30
       Fix typos in documentation
 
